fix products align

--- a/webdesignfarmacie/style.css
+++ b/webdesignfarmacie/style.css
@@ -78,3 +78,9 @@ body{
   width: 100%;
   height: 200px;
   }
+
+.col-sm-4{
+    width: 300px;
+    height: 400px;
+    color: black;
+}
